--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3 class="headings">Frontend Developer</h3>
         <p>
-          Recent graduate with hands-on
-          experience in WordPress development, having successfully completed.
-          Proficient in HTML, CSS, and JavaScript,
-          with a strong commitment to delivering responsive and visually
-          appealing websites. Eager to contribute creativity and technical
-          skills to dynamic teams, while continuously expanding knowledge in web
-          development and WordPress customization.
+          Recent graduate with hands-on experience in WordPress development,
+          having successfully completed. Proficient in HTML, CSS, and
+          JavaScript, with a strong commitment to delivering responsive and
+          visually appealing websites. Eager to contribute creativity and
+          technical skills to dynamic teams, while continuously expanding
+          knowledge in web development and WordPress customization.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
@@ -235,17 +234,19 @@
         <div class="projects-gallery">
           <div class="proj-box mix product">
             <div class="proj-image">
-              <img src="image/image2.jpg" alt="" />
+              <img src="image/image9.png" alt="" />
             </div>
             <div class="proj-content">
-              <h3>Graphic Design</h3>
+              <h3>Wordpress Site</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Consectetur sequi error neque in. Hic expedita maiores rem alias
-                eligendi cumque ullam vitae quas ea. Voluptates, a consequatur!
-                Magnam, blanditiis atque.
+                POWERFIT Gym is a ready-to-use website template that comes with
+                the Responsive theme. This template is a fully customizable and
+                mobile-friendly template designed for gym, physical or any kind
+                of fitness-based business.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a href="https://powerfitgym.rf.gd/" target="_blank"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
